deploying xmas cheer

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello github pages!
+<html>
+<head><link rel="stylesheet" href="main.css" /></head>
+<body onload="run()">
+  <canvas id="outside">
+
+  </canvas>
+</body>
+<script src="main.js"></script>
+</html>
