--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head><link rel="stylesheet" href="main.css" /></head>
 <body onload="run()">
+  <div id="background">
   <canvas id="outside">
 
   </canvas>
+  </div>
 </body>
 <script src="main.js"></script>
 </html>
