updated to latest for deploy

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stylesheet" href="main.css" /></head>
+<head><link rel="stylesheet" href="index.css" /></head>
 <body onload="run()">
   <div id="background">
   <canvas id="outside">
@@ -7,5 +7,5 @@
   </canvas>
   </div>
 </body>
-<script src="main.js"></script>
+<script src="index.js"></script>
 </html>
